--- a/notebooks/schemas-for-schemaless.ipynb
+++ b/notebooks/schemas-for-schemaless.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "5f4915b9",
    "metadata": {},
    "outputs": [
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-07-12 18:12:25.234374\n",
-      "2021-07-12 18:12:25.575075\n"
+      "2021-07-13 13:28:18.078674\n",
+      "2021-07-13 13:28:18.326490\n"
      ]
     },
     {
@@ -159,7 +159,7 @@
        "[17963 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "773975c7",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "2d043cce",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ff20e224",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "[17963 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "43f83525",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "Name: ontology_prefix, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,449 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "26bbfa9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yaml_model = scoped_mapping.read_yaml_model(yaml_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9cce0380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classes:\n",
+      "  condensed_traits_NCBI:\n",
+      "    slot_usage: {}\n",
+      "    slots:\n",
+      "    - tax_id\n",
+      "    - species_tax_id\n",
+      "    - data_source\n",
+      "    - org_name\n",
+      "    - species\n",
+      "    - genus\n",
+      "    - family\n",
+      "    - order\n",
+      "    - class\n",
+      "    - phylum\n",
+      "    - superkingdom\n",
+      "    - gram_stain\n",
+      "    - metabolism\n",
+      "    - pathways\n",
+      "    - carbon_substrates\n",
+      "    - sporulation\n",
+      "    - motility\n",
+      "    - range_tmp\n",
+      "    - range_salinity\n",
+      "    - cell_shape\n",
+      "    - isolation_source\n",
+      "    - d1_lo\n",
+      "    - d1_up\n",
+      "    - d2_lo\n",
+      "    - d2_up\n",
+      "    - doubling_h\n",
+      "    - genome_size\n",
+      "    - gc_content\n",
+      "    - coding_genes\n",
+      "    - optimum_tmp\n",
+      "    - optimum_ph\n",
+      "    - growth_tmp\n",
+      "    - rRNA16S_genes\n",
+      "    - tRNA_genes\n",
+      "    - ref_id\n",
+      "default_prefix: organism\n",
+      "description: organism\n",
+      "enums:\n",
+      "  cell_shape_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      bacillus:\n",
+      "        description: bacillus\n",
+      "      branced:\n",
+      "        description: branced\n",
+      "      coccobacillus:\n",
+      "        description: coccobacillus\n",
+      "      coccus:\n",
+      "        description: coccus\n",
+      "      'disc ':\n",
+      "        description: 'disc '\n",
+      "      filament:\n",
+      "        description: filament\n",
+      "      flask:\n",
+      "        description: flask\n",
+      "      fusiform:\n",
+      "        description: fusiform\n",
+      "      irregular:\n",
+      "        description: irregular\n",
+      "      pleomorphic:\n",
+      "        description: pleomorphic\n",
+      "      ring:\n",
+      "        description: ring\n",
+      "      spindle:\n",
+      "        description: spindle\n",
+      "      spiral:\n",
+      "        description: spiral\n",
+      "      spirochete:\n",
+      "        description: spirochete\n",
+      "      square:\n",
+      "        description: square\n",
+      "      star:\n",
+      "        description: star\n",
+      "      tailed:\n",
+      "        description: tailed\n",
+      "      triangular:\n",
+      "        description: triangular\n",
+      "      vibrio:\n",
+      "        description: vibrio\n",
+      "  data_source_enum:\n",
+      "    permissible_values:\n",
+      "      amend-shock:\n",
+      "        description: amend-shock\n",
+      "      bacdive-microa:\n",
+      "        description: bacdive-microa\n",
+      "      campedelli:\n",
+      "        description: campedelli\n",
+      "      corkrey:\n",
+      "        description: corkrey\n",
+      "      edwards:\n",
+      "        description: edwards\n",
+      "      engqvist:\n",
+      "        description: engqvist\n",
+      "      faprotax:\n",
+      "        description: faprotax\n",
+      "      fierer:\n",
+      "        description: fierer\n",
+      "      genbank:\n",
+      "        description: genbank\n",
+      "      gold:\n",
+      "        description: gold\n",
+      "      jemma-refseq:\n",
+      "        description: jemma-refseq\n",
+      "      kegg:\n",
+      "        description: kegg\n",
+      "      kremer:\n",
+      "        description: kremer\n",
+      "      masonmm:\n",
+      "        description: masonmm\n",
+      "      mediadb:\n",
+      "        description: mediadb\n",
+      "      methanogen:\n",
+      "        description: methanogen\n",
+      "      microbe-directory:\n",
+      "        description: microbe-directory\n",
+      "      nielsensl:\n",
+      "        description: nielsensl\n",
+      "      pasteur:\n",
+      "        description: pasteur\n",
+      "      patric:\n",
+      "        description: patric\n",
+      "      prochlorococcus:\n",
+      "        description: prochlorococcus\n",
+      "      protraits:\n",
+      "        description: protraits\n",
+      "      roden-jin:\n",
+      "        description: roden-jin\n",
+      "      rrndb:\n",
+      "        description: rrndb\n",
+      "      schulz-jorgensen:\n",
+      "        description: schulz-jorgensen\n",
+      "      silva:\n",
+      "        description: silva\n",
+      "  gram_stain_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      negative:\n",
+      "        description: negative\n",
+      "      positive:\n",
+      "        description: positive\n",
+      "  metabolism_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      aerobic:\n",
+      "        description: aerobic\n",
+      "      anaerobic:\n",
+      "        description: anaerobic\n",
+      "      facultative:\n",
+      "        description: facultative\n",
+      "      microaerophilic:\n",
+      "        description: microaerophilic\n",
+      "      obligate aerobic:\n",
+      "        description: obligate aerobic\n",
+      "      obligate anaerobic:\n",
+      "        description: obligate anaerobic\n",
+      "      strictly anaerobic:\n",
+      "        description: strictly anaerobic\n",
+      "  motility_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      axial filament:\n",
+      "        description: axial filament\n",
+      "      flagella:\n",
+      "        description: flagella\n",
+      "      gliding:\n",
+      "        description: gliding\n",
+      "      'no':\n",
+      "        description: 'no'\n",
+      "      'yes':\n",
+      "        description: 'yes'\n",
+      "  rRNA16S_genes_enum:\n",
+      "    permissible_values:\n",
+      "      '1':\n",
+      "        description: '1'\n",
+      "      '10':\n",
+      "        description: '10'\n",
+      "      '11':\n",
+      "        description: '11'\n",
+      "      '12':\n",
+      "        description: '12'\n",
+      "      '13':\n",
+      "        description: '13'\n",
+      "      '14':\n",
+      "        description: '14'\n",
+      "      '15':\n",
+      "        description: '15'\n",
+      "      '16':\n",
+      "        description: '16'\n",
+      "      '17':\n",
+      "        description: '17'\n",
+      "      '2':\n",
+      "        description: '2'\n",
+      "      '3':\n",
+      "        description: '3'\n",
+      "      '4':\n",
+      "        description: '4'\n",
+      "      '5':\n",
+      "        description: '5'\n",
+      "      '6':\n",
+      "        description: '6'\n",
+      "      '7':\n",
+      "        description: '7'\n",
+      "      '8':\n",
+      "        description: '8'\n",
+      "      '9':\n",
+      "        description: '9'\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "  range_salinity_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      euryhaline:\n",
+      "        description: euryhaline\n",
+      "      extreme-halophilic:\n",
+      "        description: extreme-halophilic\n",
+      "      halophilic:\n",
+      "        description: halophilic\n",
+      "      halotolerant:\n",
+      "        description: halotolerant\n",
+      "      moderate-halophilic:\n",
+      "        description: moderate-halophilic\n",
+      "      non-halophilic:\n",
+      "        description: non-halophilic\n",
+      "      stenohaline:\n",
+      "        description: stenohaline\n",
+      "  range_tmp_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      extreme thermophilic:\n",
+      "        description: extreme thermophilic\n",
+      "      facultative psychrophilic:\n",
+      "        description: facultative psychrophilic\n",
+      "      mesophilic:\n",
+      "        description: mesophilic\n",
+      "      psychrophilic:\n",
+      "        description: psychrophilic\n",
+      "      psychrotolerant:\n",
+      "        description: psychrotolerant\n",
+      "      thermophilic:\n",
+      "        description: thermophilic\n",
+      "      thermotolerant:\n",
+      "        description: thermotolerant\n",
+      "  sporulation_enum:\n",
+      "    permissible_values:\n",
+      "      NA:\n",
+      "        description: NA\n",
+      "      'no':\n",
+      "        description: 'no'\n",
+      "      'yes':\n",
+      "        description: 'yes'\n",
+      "  superkingdom_enum:\n",
+      "    permissible_values:\n",
+      "      Archaea:\n",
+      "        description: Archaea\n",
+      "      Bacteria:\n",
+      "        description: Bacteria\n",
+      "id: https://w3id.org/organism\n",
+      "imports:\n",
+      "- linkml:types\n",
+      "name: organism\n",
+      "prefixes:\n",
+      "  linkml: https://w3id.org/link/linkml/\n",
+      "  organism: https://w3id.org/organism\n",
+      "slots:\n",
+      "  carbon_substrates:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  cell_shape:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: cell_shape_enum\n",
+      "  class:\n",
+      "    examples:\n",
+      "    - value: Alphaproteobacteria\n",
+      "    range: string\n",
+      "  coding_genes:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  d1_lo:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  d1_up:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  d2_lo:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  d2_up:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  data_source:\n",
+      "    examples:\n",
+      "    - value: silva\n",
+      "    range: data_source_enum\n",
+      "  doubling_h:\n",
+      "    examples:\n",
+      "    - value: '1.7'\n",
+      "    range: string\n",
+      "  family:\n",
+      "    examples:\n",
+      "    - value: Sphingomonadaceae\n",
+      "    range: string\n",
+      "  gc_content:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  genome_size:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  genus:\n",
+      "    examples:\n",
+      "    - value: Zymomonas\n",
+      "    range: string\n",
+      "  gram_stain:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: gram_stain_enum\n",
+      "  growth_tmp:\n",
+      "    examples:\n",
+      "    - value: '30'\n",
+      "    range: string\n",
+      "  isolation_source:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  metabolism:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: metabolism_enum\n",
+      "  motility:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: motility_enum\n",
+      "  optimum_ph:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  optimum_tmp:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  order:\n",
+      "    examples:\n",
+      "    - value: Sphingomonadales\n",
+      "    range: string\n",
+      "  org_name:\n",
+      "    examples:\n",
+      "    - value: Zymomonas mobilis\n",
+      "    range: string\n",
+      "  pathways:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  phylum:\n",
+      "    examples:\n",
+      "    - value: Proteobacteria\n",
+      "    range: string\n",
+      "  rRNA16S_genes:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: rRNA16S_genes_enum\n",
+      "  range_salinity:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: range_salinity_enum\n",
+      "  range_tmp:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: range_tmp_enum\n",
+      "  ref_id:\n",
+      "    examples:\n",
+      "    - value: '20237'\n",
+      "    range: string\n",
+      "  species:\n",
+      "    examples:\n",
+      "    - value: Zymomonas mobilis\n",
+      "    range: string\n",
+      "  species_tax_id:\n",
+      "    examples:\n",
+      "    - value: '542'\n",
+      "    range: integer\n",
+      "  sporulation:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: sporulation_enum\n",
+      "  superkingdom:\n",
+      "    examples:\n",
+      "    - value: Bacteria\n",
+      "    range: superkingdom_enum\n",
+      "  tRNA_genes:\n",
+      "    examples:\n",
+      "    - value: NA\n",
+      "    range: string\n",
+      "  tax_id:\n",
+      "    examples:\n",
+      "    - value: '542'\n",
+      "    range: integer\n",
+      "types: {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "yaml.safe_dump(yaml_model, sys.stdout, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "54a5d61a",
    "metadata": {},
    "outputs": [
@@ -695,13 +1137,13 @@
        "19             NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yaml_model = scoped_mapping.read_yaml_model(yaml_file)\n",
+    "\n",
     "\n",
     "avaialbe_enums = scoped_mapping.get_avaialbe_enums(yaml_model)\n",
     "# print(avaialbe_enums)\n",
@@ -717,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "64faa245",
    "metadata": {},
    "outputs": [
@@ -728,7 +1170,7 @@
        "Name: ontology_prefix, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7d905972",
    "metadata": {},
    "outputs": [],
@@ -753,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "c46d3093",
    "metadata": {},
    "outputs": [
@@ -761,8 +1203,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-07-12 18:12:25.786756\n",
-      "2021-07-12 18:12:37.755785\n"
+      "2021-07-13 13:30:59.025902\n",
+      "2021-07-13 13:31:13.187459\n"
      ]
     },
     {
@@ -1064,7 +1506,7 @@
        "[245 rows x 14 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "a8b69b90",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1543,7 @@
        "set()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "dbe69197",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "9f3d22f7",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1873,7 @@
        "12              label       label                  rdftab  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "7f027d7d",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1925,7 @@
        "Name: ontology_prefix, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "d2bf54d6",
    "metadata": {},
    "outputs": [],
@@ -1510,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "0b7a7f66",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1962,7 @@
        "{'branced', 'disc', 'na', 'ring', 'spindle', 'star', 'tailed'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "a40c8e80",
    "metadata": {},
    "outputs": [],
@@ -1554,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "8c03fc88",
    "metadata": {},
    "outputs": [
